# splash_thing

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: defines.hpp  main.cpp
